@@ -68,6 +68,7 @@ Improvements:
    * Expand elm_transit_tween_mode ELM_TRANSIT_TWEEN_MODE_DIVISOR_INTERP, ELM_TRANSIT_TWEEN_MODE_BOUNCE, ELM_TRANSIT_TWEEN_MODE_SPRING
    * Added new APIs elm_transit_tween_mode_facator_set()/get()
    * Ctxpopup will be dismissed when language is changed.
+   * Popup is now a focusable object.
 
 Fixes:
 
